# anubistats

./: .gitignore  Cargo.toml  flake.nix
crates/anubistats/: Cargo.toml
crates/anubistats-query/: Cargo.toml
crates/anubistats-query/src/: lib.rs
crates/anubistats/src/: lib.rs  main.rs  repl.rs
