[package]
name = "anubistats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "repl"
path = "src/repl.rs"

[dependencies]
anyhow = "1.0.70"
csv = "1.2.1"
roaring = "0.10.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
anubistats-query = { path = "../anubistats-query" }
